--- a/src/importSoil/soilaggregation.ipynb
+++ b/src/importSoil/soilaggregation.ipynb
@@ -17,6 +17,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:  \n",
+    "Loads environmental variables and the names of the tables we'd like to create/interact with (constants)\n",
+    "\n",
+    "Psuedocode:\n",
+    "- Set the name of the table that will hold the final aggregated data\n",
+    "- Load the name of the table that holds soil geometries\n",
+    "- Load the name of the table that holds the various components (different soils) per soil geometry\n",
+    "- Load the name of the table that holds the land composition details around each soil geometry\n",
+    "- Load the name of the table that holds the soil properties per province and soil code\n",
+    "- Load the name of the table that holds the agriculture\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "- Load the necessary environment variables from the .env file located in the docker folder"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -27,8 +47,9 @@
     "SOIL_COMP_TABLE = \"soil_components\"\n",
     "SOIL_SURRONDINGS_TABLE = \"soil_surronding_land\"\n",
     "SOIL_DATA_TABLE = \"soil_data\"\n",
+    "AG_REGIONS_TABLE = \"census_ag_regions\"\n",
     "\n",
-    "load_dotenv()\n",
+    "load_dotenv(\"../docker/.env\")\n",
     "PG_DB = os.getenv(\"POSTGRES_DB\")\n",
     "PG_ADDR = os.getenv(\"POSTGRES_ADDR\")\n",
     "PG_PORT = os.getenv(\"POSTGRES_PORT\")\n",
@@ -42,8 +63,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def main():\n",
+    "    if (\n",
+    "        PG_DB is None\n",
+    "        or PG_ADDR is None\n",
+    "        or PG_PORT is None\n",
+    "        or PG_USER is None\n",
+    "        or PG_PW is None\n",
+    "    ):\n",
+    "        raise ValueError(\"Environment variables not set\")\n",
+    "\n",
+    "    db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
+    "    conn = db.connect()\n",
+    "\n",
+    "    # get data\n",
+    "    soil_data = pullSoilData(conn)\n",
+    "    surronding_soil = pullSurroundingSoil(conn)\n",
+    "    soil_components = pullSoilComponents(conn)\n",
+    "    soil_geometry = pullSoilGeometry(conn)\n",
+    "\n",
+    "    # Merge data and aggregate them\n",
+    "    merge_df = getMergedf(soil_data, surronding_soil, soil_components, soil_geometry)\n",
+    "\n",
+    "    # Command to add to db\n",
+    "    merge_df.to_sql(TABLENAME, conn, schema=\"public\", if_exists=\"replace\", index=False)\n",
+    "    conn.commit()\n",
+    "    db.cleanup()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:  \n",
+    "Loads the soil property data per province and soil code from the soil data table ([readme](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#soil_data))  \n",
+    "\n",
+    "Psuedocode:\n",
+    "- Creates the SQL query\n",
+    "- Use [pandas to load the data into the dataframe directly](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html) (using the query and a database connection)\n",
+    "- Of the data loaded from the database, drop all irrelevant attributes. The attributes we are interested in keeping are provided as a list\n",
+    "- [Rename id to soil_id](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.rename.html) (helps distinguish that it is not serial)\n",
+    "\n",
+    "Note: \n",
+    "the inplace parameter makes it so that the dataframe itself is modified (as opposed to a copy). Therefore, the following two line are equivilant:\n",
+    "1. soil_data.rename(columns={\"id\": \"soil_id\"}, inplace=True)    \n",
+    "2. soil_data = soil_data.rename(columns={\"id\": \"soil_id\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def pullSoilData(conn: sq.engine.Connection) -> pd.DataFrame:\n",
-    "    query = sq.text(\"SELECT * FROM public.soil_data\")\n",
+    "    query = sq.text(f\"SELECT * FROM public.{SOIL_DATA_TABLE}\")\n",
     "    soil_data = pd.read_sql(query, conn)\n",
     "    soil_data = soil_data[\n",
     "        [\n",
@@ -62,7 +136,7 @@
     "            \"water_reten_1500\",\n",
     "            \"bulk_density\",\n",
     "            \"elec_cond\",\n",
-    "            \"percnt_wood\",\n",
+    "            \"percnt_wood\"\n",
     "        ]\n",
     "    ]\n",
     "\n",
@@ -72,17 +146,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:  \n",
+    "Loads the land composition details around each soil geometry from the soil surronding land table ([readme](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#soil_surronding_land))  \n",
+    "\n",
+    "Psuedocode:\n",
+    "- Creates the SQL query\n",
+    "- Use [pandas to load the data into the dataframe directly](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html) (using the query and a database connection)\n",
+    "- Of the data loaded from the database, drop all irrelevant attributes. The attributes we are interested in keeping are provided as a list"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def pullSurroundingSoil(conn: sq.engine.Connection) -> pd.DataFrame:\n",
-    "    query = sq.text(\"SELECT * FROM public.soil_surronding_land\")\n",
+    "    query = sq.text(f\"SELECT * FROM public.{SOIL_SURRONDINGS_TABLE}\")\n",
     "    surronding_soil = pd.read_sql(query, conn)\n",
     "    surronding_soil = surronding_soil[[\"poly_id\", \"land_area\", \"water_area\"]]\n",
     "\n",
     "    return surronding_soil"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:  \n",
+    "Loads the various components (different soils) per soil geometry from the soil components table ([readme](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#soil_components))  \n",
+    "\n",
+    "Psuedocode:\n",
+    "- Creates the SQL query\n",
+    "- Use [pandas to load the data into the dataframe directly](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html) (using the query and a database connection)\n",
+    "- Of the data loaded from the database, drop all irrelevant attributes. The attributes we are interested in keeping are provided as a list"
    ]
   },
   {
@@ -92,7 +192,7 @@
    "outputs": [],
    "source": [
     "def pullSoilComponents(conn: sq.engine.Connection) -> pd.DataFrame:\n",
-    "    query = sq.text(\"SELECT * FROM public.soil_components\")\n",
+    "    query = sq.text(f\"SELECT * FROM public.{SOIL_COMP_TABLE}\")\n",
     "    soil_components = pd.read_sql(query, conn)\n",
     "    soil_components = soil_components[\n",
     "        [\n",
@@ -108,6 +208,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:  \n",
+    "Loads the agriculture regions ([readme](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#census_ag_regions)) and then associates each soil geometry ([readme](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#soil_geometry)) with their respective distirct\n",
+    "\n",
+    "Psuedocode:\n",
+    "- Create the regions SQL query\n",
+    "- Use [geopandas to load the data into a geodataframe directly](https://geopandas.org/en/stable/docs/reference/api/geopandas.GeoDataFrame.from_postgis.html) using the query, a database connection, a specified coordinate system (crs) and the column name with the boundaries/geometry\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "- Create the soil geometry SQL query\n",
+    "- Use [geopandas to load the data into a geodataframe directly](https://geopandas.org/en/stable/docs/reference/api/geopandas.GeoDataFrame.from_postgis.html) using the query, a database connection, a specified coordinate system (crs) and the column name with the boundaries/geometry\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "- Join the soil geometry geodataframe and the regions geodataframe based on which geometries fall into which regions (as per predicate: intersects) and all non intersecting points are deleted (as per how: inner)\n",
+    "- The join creates the column index_right which is not helpful, delete it as well as the geometry (since both are irrelevant)\n",
+    "- Convert the resulting geodataframe into a dataframe "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -115,12 +238,12 @@
    "source": [
     "def pullSoilGeometry(conn: sq.engine.Connection) -> pd.DataFrame:\n",
     "    # load the boundaries for the agriculture regions\n",
-    "    regionQuery = sq.text(\"select district, geometry FROM public.census_ag_regions\")\n",
+    "    regionQuery = sq.text(\"select district, geometry FROM public.{AG_REGIONS_TABLE}\")\n",
     "    agRegions = gpd.GeoDataFrame.from_postgis(\n",
     "        regionQuery, conn, crs=\"EPSG:3347\", geom_col=\"geometry\"\n",
     "    )\n",
     "\n",
-    "    soilQuery = sq.text(\"select * FROM public.soil_geometry\")\n",
+    "    soilQuery = sq.text(\"select * FROM public.{SOIL_GEOM_TABLE}\")\n",
     "    soilRegions = gpd.GeoDataFrame.from_postgis(\n",
     "        soilQuery, conn, crs=\"EPSG:3347\", geom_col=\"geometry\"\n",
     "    )\n",
@@ -133,6 +256,25 @@
     "    soil_geometry = pd.DataFrame(soil_geometry)\n",
     "\n",
     "    return soil_geometry"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:  \n",
+    "Combines all soil data into a single dataframe \n",
+    "\n",
+    "Psuedocode:\n",
+    "- Starting with the soil components, join the soil data on the soil_id and province, deleting any data on both sides if this combination does not exist (as per how: inner)\n",
+    "- With the resulting dataframe add the surronding data on the poly_id, deleting any data for which there is not match for\n",
+    "- With the resulting dataframe add the soil geometry on the poly_id, deleting any data fro which there is no match\n",
+    "- Since water_holding_cap is categorical, but still uses integers, we transform it into a numerical value \n",
+    "- Get a list of the columns, removing the names of the columns we will not want to scale by their percentage weights\n",
+    "- For each row, scale each column by the percentage amount\n",
+    "- Drop the now unnecessary columns\n",
+    "- aggregate all values by the mean\n",
+    "- rename the resulting columns"
    ]
   },
   {
@@ -224,40 +366,6 @@
     "    ]\n",
     "\n",
     "    return final_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def main():\n",
-    "    if (\n",
-    "        PG_DB is None\n",
-    "        or PG_ADDR is None\n",
-    "        or PG_PORT is None\n",
-    "        or PG_USER is None\n",
-    "        or PG_PW is None\n",
-    "    ):\n",
-    "        raise ValueError(\"Environment variables not set\")\n",
-    "\n",
-    "    db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
-    "    conn = db.connect()\n",
-    "\n",
-    "    # get data\n",
-    "    soil_data = pullSoilData(conn)\n",
-    "    surronding_soil = pullSurroundingSoil(conn)\n",
-    "    soil_components = pullSoilComponents(conn)\n",
-    "    soil_geometry = pullSoilGeometry(conn)\n",
-    "\n",
-    "    # Merge data and aggregate them\n",
-    "    merge_df = getMergedf(soil_data, surronding_soil, soil_components, soil_geometry)\n",
-    "\n",
-    "    # Command to add to db\n",
-    "    merge_df.to_sql(TABLENAME, conn, schema=\"public\", if_exists=\"replace\", index=False)\n",
-    "    conn.commit()\n",
-    "    db.cleanup()"
    ]
   },
   {
