attempting to satisfy linters

--- a/src/models/classifiers.ipynb
+++ b/src/models/classifiers.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.svm import SVC, LinearSVC\n",
+    "from sklearn.ensemble import RandomForestClassifier  # type: ignore\n",
+    "from sklearn.svm import SVC, LinearSVC  # type: ignore\n",
     "from evaluator import ModelEvaluator\n",
     "import sys, warnings\n",
     "import pandas as pd\n",
@@ -72,11 +72,11 @@
     "    numCombinations = len(dataset)\n",
     "\n",
     "    for currData in dataset:\n",
-    "        trainningData = currData[\"train\"]\n",
+    "        trainningData = pd.DataFrame(currData[\"train\"])\n",
     "        trainY = trainningData[predictor]\n",
     "        trainX = setModifier.rmErgotPredictors(trainningData)\n",
     "\n",
-    "        testData = currData[\"test\"]\n",
+    "        testData = pd.DataFrame(currData[\"test\"])\n",
     "        testY = testData[predictor]\n",
     "        testX = setModifier.rmErgotPredictors(testData)\n",
     "\n",
@@ -121,11 +121,11 @@
     "    numCombinations = len(dataset)\n",
     "\n",
     "    for currData in dataset:\n",
-    "        trainningData = currData[\"train\"]\n",
+    "        trainningData = pd.DataFrame(currData[\"train\"])\n",
     "        trainY = trainningData[predictor]\n",
     "        trainX = setModifier.rmErgotFeatures(trainningData)\n",
     "\n",
-    "        testData = currData[\"test\"]\n",
+    "        testData = pd.DataFrame(currData[\"test\"])\n",
     "        testY = testData[predictor]\n",
     "        testX = setModifier.rmErgotFeatures(testData)\n",
     "\n",
