--- a/src/models/dimReduction.ipynb
+++ b/src/models/dimReduction.ipynb
@@ -6,11 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.random_projection import GaussianRandomProjection\n",
-    "from sklearn.preprocessing import PolynomialFeatures\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.feature_selection import RFECV\n",
-    "from sklearn.decomposition import PCA\n",
+    "from sklearn.random_projection import GaussianRandomProjection  # type: ignore\n",
+    "from sklearn.preprocessing import PolynomialFeatures  # type: ignore\n",
+    "from sklearn.ensemble import RandomForestClassifier  # type: ignore\n",
+    "from sklearn.feature_selection import RFECV  # type: ignore\n",
+    "from sklearn.decomposition import PCA  # type: ignore\n",
     "from evaluator import ModelEvaluator\n",
     "import sys, warnings\n",
     "\n",
