--- a/src/models/regression.ipynb
+++ b/src/models/regression.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.svm import SVR, LinearSVR\n",
+    "from sklearn.ensemble import RandomForestRegressor  # type: ignore\n",
+    "from sklearn.svm import SVR, LinearSVR  # type: ignore\n",
     "from evaluator import ModelEvaluator\n",
     "import numpy as np\n",
     "import sys, warnings\n",
