attempting to satisfy linters

--- a/src/models/classifiers.ipynb
+++ b/src/models/classifiers.ipynb
@@ -13,8 +13,8 @@
     "import pandas as pd\n",
     "\n",
     "sys.path.append(\"../\")\n",
-    "from datasets.setCreator import SetCreator\n",
-    "from datasets.setModifier import SetModifier"
+    "from datasets.setCreator import SetCreator  # type: ignore\n",
+    "from datasets.setModifier import SetModifier  # type: ignore"
    ]
   },
   {
@@ -63,15 +63,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def testWithErgotFeatures(predictor: str, dataset: pd.DataFrame):\n",
+    "def testWithErgotFeatures(predictor: str, datasets: list):\n",
     "    print(\"Running the Random Forest Classifier:\")\n",
     "    print(f\"Predicting: {predictor}\\n\\n\")\n",
     "    numExcludedSets = 0\n",
     "    bestModel = {\"auc\": 0}\n",
     "\n",
-    "    numCombinations = len(dataset)\n",
+    "    numCombinations = len(datasets)\n",
     "\n",
-    "    for currData in dataset:\n",
+    "    for currData in datasets:\n",
     "        trainningData = pd.DataFrame(currData[\"train\"])\n",
     "        trainY = trainningData[predictor]\n",
     "        trainX = setModifier.rmErgotPredictors(trainningData)\n",
@@ -112,15 +112,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def testWithoutErgotFeatures(predictor: str, dataset: pd.DataFrame):\n",
+    "def testWithoutErgotFeatures(predictor: str, datasets: list):\n",
     "    print(\"Running the Random Forest Classifier:\")\n",
     "    print(f\"Predicting: {predictor}\\n\\n\")\n",
     "    numExcludedSets = 0\n",
     "    bestModel = {\"auc\": 0}\n",
     "\n",
-    "    numCombinations = len(dataset)\n",
+    "    numCombinations = len(datasets)\n",
     "\n",
-    "    for currData in dataset:\n",
+    "    for currData in datasets:\n",
     "        trainningData = pd.DataFrame(currData[\"train\"])\n",
     "        trainY = trainningData[predictor]\n",
     "        trainX = setModifier.rmErgotFeatures(trainningData)\n",
@@ -240,15 +240,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def SVMLinearWithErgotFeatures(predictor: str, dataset: pd.DataFrame):\n",
+    "def SVMLinearWithErgotFeatures(predictor: str, datasets: list):\n",
     "    print(\"Running linear SVM Classifier:\")\n",
     "    print(f\"Predicting: {predictor}\\n\\n\")\n",
     "    numExcludedSets = 0\n",
-    "    bestModel = {\"auc\": 0}\n",
+    "    bestModel = {\"auc\": 0.0}\n",
     "\n",
-    "    numCombinations = len(dataset)\n",
+    "    numCombinations = len(datasets)\n",
     "\n",
-    "    for currData in dataset:\n",
+    "    for currData in datasets:\n",
     "        trainningData = currData[\"train\"]\n",
     "        trainY = trainningData[predictor]\n",
     "        trainX = setModifier.rmErgotPredictors(trainningData)\n",
@@ -291,15 +291,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def SVMPolyWithErgotFeatures(predictor: str, dataset: pd.DataFrame):\n",
+    "def SVMPolyWithErgotFeatures(predictor: str, datasets: list):\n",
     "    print(\"Running poly kernal SVM Classifier:\")\n",
     "    print(f\"Predicting: {predictor}\\n\\n\")\n",
     "    numExcludedSets = 0\n",
-    "    bestModel = {\"auc\": 0}\n",
+    "    bestModel = {\"auc\": 0.0}\n",
     "\n",
-    "    numCombinations = len(dataset)\n",
+    "    numCombinations = len(datasets)\n",
     "\n",
-    "    for currData in dataset:\n",
+    "    for currData in datasets:\n",
     "        trainningData = currData[\"train\"]\n",
     "        trainY = trainningData[predictor]\n",
     "        trainX = setModifier.rmErgotPredictors(trainningData)\n",
@@ -344,15 +344,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def SVMRBFWithErgotFeatures(predictor: str, dataset: pd.DataFrame):\n",
+    "def SVMRBFWithErgotFeatures(predictor: str, datasets: list):\n",
     "    print(\"Running RBF SVM Classifier:\")\n",
     "    print(f\"Predicting: {predictor}\\n\\n\")\n",
     "    numExcludedSets = 0\n",
-    "    bestModel = {\"auc\": 0}\n",
+    "    bestModel = {\"auc\": 0.0}\n",
     "\n",
-    "    numCombinations = len(dataset)\n",
+    "    numCombinations = len(datasets)\n",
     "\n",
-    "    for currData in dataset:\n",
+    "    for currData in datasets:\n",
     "        trainningData = currData[\"train\"]\n",
     "        trainY = trainningData[predictor]\n",
     "        trainX = setModifier.rmErgotPredictors(trainningData)\n",
