--- a/src/ModelBuilder.ipynb
+++ b/src/ModelBuilder.ipynb
@@ -26,8 +26,25 @@
     "\n",
     "import pandas as pd\n",
     "import sqlalchemy as sq\n",
+    "from imblearn.combine import SMOTEENN, SMOTETomek\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from imblearn.ensemble import (\n",
+    "    BalancedBaggingClassifier,\n",
+    "    BalancedRandomForestClassifier,\n",
+    "    EasyEnsembleClassifier,\n",
+    "    RUSBoostClassifier,\n",
+    ")\n",
     "\n",
-    "from ModelBuilderMethods import getConn, extractYears, scaleColumns, encodeColumns"
+    "from sklearn.metrics import (\n",
+    "    accuracy_score,\n",
+    "    precision_score,\n",
+    "    recall_score,\n",
+    "    f1_score,\n",
+    "    roc_auc_score,\n",
+    ")\n",
+    "\n",
+    "from ModelBuilderMethods import getConn, extractYears, scaleColumns, encodeColumns\n",
+    "from Models.models_ensemble import getBalancedClassifier, getClassifier"
    ]
   },
   {
@@ -77,7 +94,8 @@
     "ergotPrevDf = pd.read_sql(ergotPrevYearsAggQuery, conn)\n",
     "ergotTargetDf = pd.read_sql(ergotTargetQuery, conn)\n",
     "\n",
-    "conn.close()"
+    "conn.close()\n",
+    "del conn"
    ]
   },
   {
@@ -87,9 +105,10 @@
    "outputs": [],
    "source": [
     "# merge on year and district\n",
-    "tempdf = pd.merge(satelliteDf, ergotPrevDf, on=[\"year\", \"district\"], how=\"left\")\n",
-    "del satelliteDf\n",
-    "del ergotPrevDf\n",
+    "# tempdf = pd.merge(satelliteDf, ergotPrevDf, on=[\"year\", \"district\"], how=\"left\")\n",
+    "# del satelliteDf\n",
+    "# del ergotPrevDf\n",
+    "tempdf = satelliteDf\n",
     "\n",
     "# merge on year and district\n",
     "datasetDf = pd.merge(ergotTargetDf, tempdf, on=[\"year\", \"district\"], how=\"left\")\n",
@@ -131,7 +150,45 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# pre balancing check\n",
+    "# print value counts downgrade\n",
+    "print(trainDf[\"downgrade\"].value_counts())\n",
+    "print(testDf[\"downgrade\"].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# count nan\n",
+    "print(trainDf.isna().sum())\n",
+    "# set nan to 0\n",
+    "trainDf = trainDf.fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "balancer = SMOTEENN(sampling_strategy=0.5, random_state=42)\n",
+    "balancedTrainDfX, balancedTrainDfY = balancer.fit_resample(trainDf.drop(columns=\"downgrade\"), trainDf[\"downgrade\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# post balancing check\n",
+    "# print value counts downgrade\n",
+    "print(balancedTrainDfY.value_counts())"
+   ]
   },
   {
    "attachments": {},
@@ -155,8 +212,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.DataFrame()\n",
-    "scaled = scaleColumns(df, ['max_temp'], None, 1)"
+    "# df = pd.DataFrame()\n",
+    "# scaled = scaleColumns(df, ['max_temp'], None, 1)"
    ]
   },
   {
@@ -173,7 +230,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "encoded = encodeColumns(df, ['max_temp'], None)"
+    "# encoded = encodeColumns(df, ['max_temp'], None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def printMetrics(model_name, y_true, y_pred):\n",
+    "    print(model_name)\n",
+    "    print(\"Accuracy: \", accuracy_score(y_true, y_pred))\n",
+    "    print(\"Precision: \", precision_score(y_true, y_pred))\n",
+    "    print(\"Recall: \", recall_score(y_true, y_pred))\n",
+    "    print(\"F1: \", f1_score(y_true, y_pred))\n",
+    "    print(\"ROC AUC: \", roc_auc_score(y_true, y_pred))\n",
+    "    print()"
    ]
   },
   {
@@ -189,7 +262,38 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ESTIMATORS = 200\n",
+    "DEPTH = 40\n",
+    "CORES = -1\n",
+    "MINSPLSPLIT = 8\n",
+    "MINSAMPLELEAF = 4\n",
+    "\n",
+    "model_rf = RandomForestClassifier(\n",
+    "    n_estimators=ESTIMATORS, random_state=42, max_depth=DEPTH, n_jobs=CORES, min_samples_split=MINSPLSPLIT, min_samples_leaf=MINSAMPLELEAF\n",
+    ")\n",
+    "model_nobalance_rf = RandomForestClassifier(\n",
+    "    n_estimators=ESTIMATORS, random_state=42, max_depth=DEPTH, n_jobs=CORES, min_samples_split=MINSPLSPLIT, min_samples_leaf=MINSAMPLELEAF\n",
+    ")\n",
+    "balanced_model_rf = BalancedRandomForestClassifier(\n",
+    "    n_estimators=ESTIMATORS, random_state=42, max_depth=DEPTH, n_jobs=CORES, min_samples_split=MINSPLSPLIT, min_samples_leaf=MINSAMPLELEAF\n",
+    ")\n",
+    "balanced_model_balanced_rf = BalancedRandomForestClassifier(\n",
+    "    n_estimators=ESTIMATORS, random_state=42, max_depth=DEPTH, n_jobs=CORES, min_samples_split=MINSPLSPLIT, min_samples_leaf=MINSAMPLELEAF\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_rf.fit(balancedTrainDfX, balancedTrainDfY)\n",
+    "model_nobalance_rf.fit(trainDf.drop(columns=\"downgrade\"), trainDf[\"downgrade\"])\n",
+    "balanced_model_rf.fit(trainDf.drop(columns=\"downgrade\"), trainDf[\"downgrade\"])\n",
+    "balanced_model_balanced_rf.fit(balancedTrainDfX, balancedTrainDfY)"
+   ]
   },
   {
    "attachments": {},
@@ -204,7 +308,50 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# set nan to 0\n",
+    "testDf = testDf.fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# get predictions\n",
+    "predictions = model_rf.predict(testDf.drop(columns=\"downgrade\"))\n",
+    "predictions_nobalance = model_nobalance_rf.predict(testDf.drop(columns=\"downgrade\"))\n",
+    "predictions_balanced = balanced_model_rf.predict(testDf.drop(columns=\"downgrade\"))\n",
+    "predictions_balanced_balanced = balanced_model_balanced_rf.predict(testDf.drop(columns=\"downgrade\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(pd.DataFrame(predictions).value_counts())\n",
+    "print(pd.DataFrame(predictions_nobalance).value_counts())\n",
+    "print(pd.DataFrame(predictions_balanced).value_counts())\n",
+    "print(pd.DataFrame(predictions_balanced_balanced).value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# get accuracy precision recall f1 roc_auc\n",
+    "printMetrics(\"sk RF balanced train set\", testDf[\"downgrade\"], predictions)\n",
+    "printMetrics(\"sk RF imbalanced train set\", testDf[\"downgrade\"], predictions_nobalance)\n",
+    "printMetrics(\"imb RF imbalanced train set\", testDf[\"downgrade\"], predictions_balanced)\n",
+    "printMetrics(\"imb RF balanced train set\", testDf[\"downgrade\"], predictions_balanced_balanced)"
+   ]
   },
   {
    "attachments": {},
